--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^7.3.0",
+    "autoprefixer": "^10.4.24",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-parse": "^5.5.6",
     "date-fns": "^4.1.0",
     "next": "16.1.6",
     "next-auth": "^4.24.11",
