--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
-    "@prisma/client": "^7.4.0",
+    "@prisma/client": "7.3.0",
     "autoprefixer": "^10.4.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,7 +20,7 @@
     "date-fns": "^4.1.0",
     "next": "16.1.6",
     "next-auth": "^4.24.11",
-    "prisma": "^7.4.0",
+    "prisma": "7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
