--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prisma": "6.5.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "server-only": "^1.0.0",
+    "server-only": "0.0.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
