--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "6.5.0",
     "@radix-ui/react-slot": "^1.2.4",
+    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.24",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parse": "^5.5.6",
