--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "6.5.0",
     "@radix-ui/react-slot": "^1.2.4",
+    "@stripe/stripe-js": "^8.7.0",
     "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.24",
     "bcryptjs": "^3.0.3",
@@ -30,6 +31,7 @@
     "prisma": "6.5.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "stripe": "^20.3.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
