--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prisma": "6.5.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sonner": "^2.0.7",
     "stripe": "^20.3.1",
     "tailwind-merge": "^3.4.0"
   },
